--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 		 
-	 <script src="~/Script/uiGetSet.js"></script>
-	 <script src="~/Script/BizLogic.js"></script>
-	 <link rel="stylesheet" href="~/Css/stylePreset1.css">
+	 <script src="Script/uiGetSet.js"></script>
+	 <script src="Script/BizLogic.js"></script>
+	 <link rel="stylesheet" href="Css/stylePreset1.css">
 </head>
 <body style=" ">
 <!--<img src="images/MOEESiteBanner.png"/><br/>
