--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		 
 	 <script src="Script/uiGetSet.js"></script>
 	 <script src="Script/BizLogic.js"></script>
-	 <link rel="stylesheet" href="Css/stylePreset1.css">
+	 <link rel="stylesheet" href="Css/StylePreset1.css">
 </head>
 <body style=" ">
 <!--<img src="images/MOEESiteBanner.png"/><br/>
