--- a/MOEESolar.html
+++ b/MOEESolar.html
@@ -10,13 +10,13 @@
 	<script src="Script/uiData.json"></script>	 
     <script src="Script/uiGetSet.js"></script>
     <script src="Script/BizLogic.js"></script-->
-	<script src="Script/jquery.min.js"></script>
+    <script src="Script/jquery.min.js"></script>
     <script src="Script/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="Css/bootswatchunited.css" />
-	<link rel="stylesheet" href="Css/stylePreset1.css">
+    <link rel="stylesheet" href="Css/bootswatchunited.css">
+    <link rel="stylesheet" href="Css/stylePreset1.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
