--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="Css/bootswatchunited.css" />
-	<link rel="stylesheet" href="Css/stylePreset1.css">
+    <link rel="stylesheet" href="Css/bootswatchunited.css">
+    <link rel="stylesheet" href="Css/stylePreset1.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
