--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link rel="stylesheet" href="Css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="Css/bootswatchunited.css">
-    <link rel="stylesheet" href="Css/stylePreset1.css">
+    <link rel="stylesheet" href="Css/StylePreset1.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid clsFullWidth">
 				<a class="navbar-brand" href="https://moee.nugmyanmar.org/">
-					<img src="images/MOEELogo200.png" style="width: 48px"/> လျှပ်စစ်နှင့်စွမ်းအင်ဝန်ကြီးဌာန
+					<img src="images/MOEElogo200.png" style="width: 48px"/> လျှပ်စစ်နှင့်စွမ်းအင်ဝန်ကြီးဌာန
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
