--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="Index.html">
+                        <a class="nav-link active" href="#">
                             Solar Simulator
                             <span class="visually-hidden">(current)</span>
 						</a>
