--- a/MOEESolar.html
+++ b/MOEESolar.html
@@ -22,7 +22,7 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid clsFullWidth">
 			<a class="navbar-brand" href="https://moee.nugmyanmar.org/">
-				<img src="images/MOEElogo200.png" style="width: 48px"/> လျှပ်စစ်နှင့်စွမ်းအင်ဝန်ကြီးဌာန
+				<img src="images/MOEElogo200.png" style="width: 48px"/> 
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
