--- a/AboutSolar.html
+++ b/AboutSolar.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 	<title>MOEE Solar Guide Book</title>
 
 	<!--link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse clsMenuShowPipe" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
 					<li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link active" href="#">
                             MOEE Solar		
 							<span class="visually-hidden">(current)</span>							
                         </a>
@@ -42,7 +42,7 @@
 						</a>
                     </li>
 					<li class="nav-item">
-                        <a class="nav-link active" href="SolarGuidebk.html">Solar Guidebook</a>
+                        <a class="nav-link" href="SolarGuidebk.html">Solar Guidebook</a>
 					</li>
                 </ul>
             </div>
