--- a/MOEESolar.html
+++ b/MOEESolar.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 	<title>About Solar System</title>
 
 	<!--link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -61,20 +61,25 @@
 				<p class="card-text lead">ဆိုလာစနစ်ဆိုသည်မှာ နေရောင်ခြည်မှရရှိသော စွမ်းအင်ကို လျှပ်စစ်စွမ်းအင် အဖြစ် ပြောင်းလဲပေးသောနည်းပညာဖြစ်ပါသည်။ Solar Photovoltaic System ဟု ခေါ်ပါသည်။  ဈေးကွက်တွင် ဆိုလာ ဟုလူသိများပါသည်။
 				ကျောက်ဖြစ်ရုပ်ကြွင်းလောင်စာ (Fossil fuel) များ အသုံးပြု၍ လျှပ်စစ်ထုတ်လုပ်ရာတွင်  ထွက်လာသည့် ကာဗွန်ဒိုင်အောက်ဆိုဒ် ဓာတ်ငွေ့များသည် ဖန်လုံအိမ်အာနိသင် အကျိုးဆက်များကို ဖြစ်ပေါ်စေပြီး ကမ္ဘာကြီး ပူနွေးလာသည့်အတွက်ကြောင့် ရာသီဥတု ဖောက်ပြန် ပြောင်းလဲခြင်းကို ဖြစ်ပေါ်စေပါသည်။ လောင်စာများ၏ ထုတ်ယူရရှိနိုင်မှုသည်လည်း နှစ်ကာလ အကန့်အသတ်ရှိသည်။ ရုပ်ကြွင်းလောင်စာ ရှားပါးမှုများ ကြုံတွေ့လာနိုင်ပါသည်။ 
 				<br />
+				<br />
 				နေရောင်ခြည်မှရရှိသော စွမ်းအင်သည် သဘာဝမှပေးသော ပြန်လည်ပြည့်ဖြိုးမြဲစွမ်းအင်ဖြစ်ပြီး သန့်ရှင်းသော၊ ခေတ်မီသော၊ ယုံကြည်စိတ်ချရသော စွမ်းအင် အမျိုးအစားဖြစ်ပါသည်။ ထို့ကြောင့် ပြန်လည်ပြည့်ဖြိုးမြဲစွမ်းအင်များကို နိုင်ငံတကာတွင် ပိုမိုတွင်ကျယ်စွာ အသုံးပြုလာကြပါသည်။ 
 				နေရောင်ရသော မည်သည့်ဒေသတွင်မဆို ဆိုလာသုံး၍ လျှပ်စစ်ထုတ်နိုင်သည့်အတွက် လျှပ်စစ်မီးမရသေးသော ဒေသများတွင်လည်း လွယ်ကူစွာ လျှပ်စစ်ထုတ်နိုင်ပါသည်။ ထို့ကြောင့် ဆိုလာသုံး၍ Micro Grid/ Mini Grid (ဒေသအခေါ်  ရွာမီး) များ ပိုတိုးပွားလာနိုင်ပါသည်။
 				ဆိုလာ၏ အကျိုးကျေးဇူးမှာ ပြန်လည်ပြည့်ဖြိုးမြဲစွမ်းအင်ဖြစ်သောကြောင့် နောက်ဆက်တွဲ လောင်စာဖိုး ကုန်ကျစရိတ်မရှိခြင်း၊ ယုံကြည်စိတ်ချစွာ သုံးစွဲနိုင်ခြင်း၊ ထိန်းသိမ်းအသုံးပြုပါက ကာလကြာရှည်စွာအသုံးပြုနိုင်ခြင်းတို့ဖြစ်ပါသည်။ အားနည်းချက်မှာ နေရောင်ရရှိမှု အပေါ်မူတည်၍  ဓာတ်အားထုတ်လုပ်မှုမှာ တသတ်မတ်တည်း မရှိဘဲ ပြောင်းလဲနေခြင်း (Variable)၊ ကနဦးမတည်ငွေ (Capital Investment) များပြားနေခြင်း၊ ညအချိန်တွင် ဓာတ်အားဆက်လက် ဖြန့်ဖြူးလိုပါက Energy Storage System (ဥပမာ ဘက်ထရီ) လိုအပ်ခြင်းတို့ ဖြစ်ပါသည်။ ဆိုလာလျှပ်စစ်ဓာတ်အားစနစ် (၄) မျိုးရှိပါသည်-
 				<br />
-				၁.၁. နေ့ဘက်သုံး ဆိုလာ <br/>
+				<br />
+				<strong>၁.၁. နေ့ဘက်သုံး ဆိုလာ</strong> <br/>
 				နေ့ဘက်သုံးဆိုလာ ဆိုသည်မှာ နေ့အချိန်အတွင်း အသုံးပြုရန် လိုအပ်သော လျှပ်စစ်အသုံးအဆောင် ပစ္စည်း များအတွက်သာ တပ်ဆင်ထားသော စနစ်ဖြစ်သည်။ (ဥပမာ -ရေမော်တာ၊ လျှပ်စစ်ပန်ကာ) 
 				<br />
-				၁.၂. ဓာတ်အားလိုင်းနှင့်ချိတ်ဆက်သုံးရသော ဆိုလာ <br/>
+				<br />
+				<strong>၁.၂. ဓာတ်အားလိုင်းနှင့်ချိတ်ဆက်သုံးရသော ဆိုလာ</strong> <br/>
 				ဆိုလာနှင့်ဓာတ်အားလိုင်းတို့  အပြန်အလှန် သွယ်တန်းတပ်ဆင်ထားခြင်းဖြစ်သည်။ နေ့အချိန် ဆိုလာမှထုတ်ယူရရှိသော လျှပ်စစ်ဓာတ်အားများကို အသုံးပြုပြီး၊ ပိုလျှံသော လျှပ်စစ်ဓာတ်အားများကို ဓာတ်အားလိုင်းပေါ်သို့ ပြန်ထည့်ပေးပါသည်။ ညအချိန် ဆိုလာ မှ ဓာတ်အားမထုတ်လုပ်နိုင်သည့်အခါ ဓာတ်အားလိုင်းမှ လျှပ်စစ်ဓာတ်အားများကို ပြန်လည်ရယူ အသုံးပြုသည့်စနစ်ဖြစ်ပါသည်။ 
 				<br />
-				၁.၃. တစ်အိမ်သုံး ဆိုလာ <br/>
+				<br />
+				<strong>၁.၃. တစ်အိမ်သုံး ဆိုလာ</strong> <br/>
 				မဟာဓာတ်အားလိုင်းနှင့် ဝေးကွာသော ဒေသများအတွက် မည်သည့်မီးလိုင်းနှင့်မျှ ချိတ်ဆက်ထားခြင်းမရှိဘဲ သီးခြားရပ်တည် အသုံးပြုနိုင်သော စနစ်ဖြစ်ပါသည်။ ထိုစနစ်အတွက် ဘက်ထရီ လိုအပ်ပါမည်။
 				<br />
-				၁.၄. Hybrid ဆိုလာ <br/>
+				<br />
+				<strong>၁.၄. Hybrid ဆိုလာ</strong> <br/>
 				ဆိုလာနှင့်အတူ အခြားသော လျှပ်စစ်ထုတ်စက်များဖြင့် တွဲဖက် အသုံးပြုသည့် စနစ်ဖြစ်ပါသည်။ ဆိုလာမှ ဓာတ်အားလုံလောက်စွာ မထုတ်လုပ်နိုင်သည့်အခါ (ဥပမာ။ နေရောင်အားနည်းသော မိုးရာသီ၊ ဆိုလာဆင်ရန် နေရာမလုံလောက်ခြင်း) လိုအပ်သော လျှပ်စစ်ဝန်အား ပမာဏအတွက် ဓာတ်အားကာမိစေရန် အရံဓာတ်အားပေးစနစ်များက ဆိုလာနှင့်အတူ တပ်ဆင်ခြင်း ဖြစ်ပါသည်။
 				</p>
 				<p class="card-text lead"><strong>MOEE</strong></p>			
