--- a/SolarGuidebk.html
+++ b/SolarGuidebk.html
@@ -61,7 +61,7 @@
 				<p class="card-text lead"><strong>လဖိုင်မော်ထွန်းအောင် (ပြည်ထောင်စုဒုတိယဝန်ကြီး)</strong></p>
 				<p><a class="btn btn-primary btn-lg" href="Files/moeesolarguidbook.pdf">Download</a></p>
 				<div>
-                    <iframe class="embed-responsive-item" width="100%" height="500px" src="Files/moeesolarguidbook.pdf#view=fitH"></iframe>
+                    <iframe class="responsive-iframe" width="100%" height="500px" src="Files/moeesolarguidbook.pdf#view=fitH"></iframe>
                 </div>
 			</div>			
 		</div>	
