--- a/SolarGuidebk.html
+++ b/SolarGuidebk.html
@@ -60,7 +60,7 @@
 				<p class="card-text lead">"ယခုထုတ်ဝေလိုက်သည့် Solar Guide book သည် ကာလတိုနှင့် ကာလလတ် လျှပ်စစ် အကြပ်အတည်းကို ကိုယ်တိုင်ဖြေရှင်းလိုသည့် အိမ်ထောင်စုများ Small and Medium Enterprise များ အတွက် အကျိုးရှိမည်ဟု မျှော်လင့်ပါသည်။ ယခု အခြေအနေကြောင့် ဖြစ်ပေါ်လာသည့် မဖြစ်မနေ ဆိုလာအသုံးပြုခြင်းများမှ နောင်အနာဂတ်တွင် ဆိုလာစီမံကိန်း၊ လျှပ်စစ်ဓာတ်အားပေး စီမံကိန်းကြီးများဖြင့် တိုင်းပြည်ကို ပြန်လည် ပြည့်ဖြိုးမြဲစွမ်းအင်ဖြင့် မောင်းနှင်နိုင်သည့် အဆင့်ရောက်အောင် ကြိုးပမ်းရာတွင် အုတ်တချပ်၊ သဲတပွင့်အဖြစ် ပါဝင်နေခြင်းဖြစ်သည်"</p>
 				<p class="card-text lead"><strong>လဖိုင်မော်ထွန်းအောင် (ပြည်ထောင်စုဒုတိယဝန်ကြီး)</strong></p>
 				<p><a class="btn btn-primary btn-lg" href="Files/moeesolarguidbook.pdf">Download</a></p>
-				<object data="Files/moeesolarguidbook.pdf#view=fitH" type="application/pdf" width="100%" height="500px">   
+				<object scrolling="auto" data="Files/moeesolarguidbook.pdf#view=fitH" type="application/pdf" width="100%" height="500px">   
 				</object>
 			</div>			
 		</div>	
