--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="Script/bootstrap.bundle.min.js"></script>
     <script src="Script/uiData.json"></script>
     <script src="Script/uiGetSet.js"></script>
-    <script src="Script/BizLogic.js"></script>
+    <script src="Script/bizLogic.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/bootstrap-grid.min.css">
