--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script src="Script/jquery.min.js"></script>
     <script src="Script/bootstrap.bundle.min.js"></script>
-    <script src="Script/uiData.json"></script>
+    <script src="uiData.json"></script>
     <script src="Script/uiGetSet.js"></script>
     <script src="Script/bizLogic.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
